--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ button {
 .main-img {
     margin: 0;
     width: 40vw;
-    height: 70vw;
+    height: 100vh;
     
     position: relative;
     top: 0;
